tests/baselines/reference/classInheritence.errors.txt
classInheritence.ts(1,17): error TS2449: Class 'A' used before its declaration.
classInheritence.ts(2,7): error TS2506: 'A' is referenced directly or indirectly in its own base expression.


==== classInheritence.ts (2 errors) ====
    class B extends A { }
                    ~
!!! error TS2449: Class 'A' used before its declaration.
!!! related TS2728 classInheritence.ts:2:7: 'A' is declared here.
    class A extends A { }
          ~
!!! error TS2506: 'A' is referenced directly or indirectly in its own base expression.